# osci

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  index.html  osci.nim  osci.nimble
examples/: simpleloop.bios.hex  simpleloop.bios.osci.asm  simpleloop.expected.txt
examples/simpleloop.hex/: simpleloop.bios.osci.asm
examples/simpleloop.raw/: simpleloop.bios.img  simpleloop.expect.txt
libosciemu/: CMakeLists.txt
libosciemu/include/osciemu/: osciemu.h
libosciemu/src/osciemu/: vm.cpp
osci/: cli.nim  emulator.nim  helpers.nim  instruction.nim  memory.nim
osci/memory/: array_memory.nim  hook_memory.nim  mapped_memory.nim  memory.nim  null_memory.nim  readonly_memory.nim  zero_memory.nim
osciasm/: assembler.nim  ast.nim  lexer.nim  osciasm.nim  parser.nim  symboltable.nim  token.nim
oscicli/: oscicli.nim
osciemu/: CMakeLists.txt  Doxyfile  Doxyfile.in
osciemu-cli/: CMakeLists.txt
osciemu-cli/src/osciemu-cli/: config.h.in  fileutils.cpp  fileutils.h  main.cpp  runmode.cpp  runmode.h  stepmode.cpp  stepmode.h  utils.cpp  utils.h
osciemu-cli/src/osciemu-cli/test/: fileutils_test.cpp
osciemu-cli/src/osciemu-cli/test/data/: simple_loop.bios.hex
osciemu/include/osciemu/: config.h.in  emulator.h  instruction.h  memory.h  osciemu.h
osciemu/src/osciemu/: emulator.cpp  instruction.cpp  memory.cpp  vm.cpp
osciemu/src/osciemu/test/: emulator_test.cpp  instruction_test.cpp  memory_test.cpp
src/: lib.rs  main.rs  utils.rs  wasm.rs
src/emulator/: mod.rs
src/instruction/: mod.rs
src/loader/: hexloader.rs  mod.rs  rawloader.rs
src/memory/: address.rs  addresses.rs  hookmemory.rs  mappedmemory.rs  mod.rs  nullmemory.rs  readonlymemory.rs  slicememory.rs
tests/: emulator_test.nim  examples.rs  helpers_test.nim  instruction.nim  instruction_test.nim  lexer_test.nim  memory.nim  memory_test.nim  run_examples.rs  run_tests.sh
tests/memory/: array_memory.nim  hook_memory.nim  mapped_memory.nim  memory.nim  readonly_memory.nim
tests/osci/: emulator_test.nim  helpers_test.nim  instruction_test.nim  memory_test.nim
tests/osci/memory/: array_memory.nim  null_memory.nim
tests/osciasm/: lexer_test.nim  parser_test.nim  symboltable_test.nim
tools/hexcompile/: hexcompile.sh
tools/osciasm/: index.js  package.json
tools/osciasm/osciasm/: index.js
tools/osciasm/osciasm/test/: index.js
tools/osciasm/parser/: index.js
tools/osciasm/parser/test/: index.js
tools/osciasm/test/data/: simpleloop.osci.asm
tools/osciwasm/: global.d.ts  karma.conf.js  osciwasm.js  package-lock.json  package.json  tsconfig.json
tools/osciwasm/src/: osciwasm.js  osciwasm.ts
tools/osciwasm/tests/: loader_hexloader.test.js  osciwasm.test.js  wasm.test.js
tools/osciwasm/tests/helpers/: constants.js
